--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "crud-app",
-  "version": "0.1.0",
+  "name": "cra-crud",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-transition-group": "^4.4.5",
+    "primereact": "^10.0.9",
+    "primeicons": "^6.0.1",
+    "primeflex": "^3.3.1",
+    "web-vitals": "^3.5.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
+    "react-scripts": "latest",
+    "react-test-renderer": "latest",
+    "sass": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
