--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug",
+            "name": "Debug backend",
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "main.go"
+            "program": "backend/main.go"
         }
     ]
 }
