--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,20 @@ services:
       driver: "json-file"
       options:
         max-size: "50m"
+  frontend:
+    build: ./frontend
+    hostname: frontend
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
+    environment:
+      - TZ=${TZ}
+    depends_on:
+      - backend
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
 
   mongo:
     image: mongo:7
