--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,13 @@
             "request": "launch",
             "mode": "debug",
             "program": "backend/main.go"
+        },
+        {
+            "name": "Debug frontend",
+            "type": "chrome",
+            "request": "launch",
+            "url": "http://localhost:3000",
+            "webRoot": "frontend"
         }
     ]
 }
