--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "env-cmd": "^10.1.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
-    "primereact": "^10.0.9",
-    "primeicons": "^6.0.1",
-    "primeflex": "^3.3.1",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
