--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,25 +1,22 @@
 {
-  "short_name": "Wake On Lan",
+  "theme_color": "#3d81e5",
+  "background_color": "#3d81e5",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "Wake On Lan",
+  "short_name": "Wake On Lan",
+  "description": "Start remotely devices using magic packet",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
