--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 COMPOSE_PROJECT_NAME=wake-on-lan
 TZ=America/Sao_Paulo
-BACKEND_API=http://backend:8080/api
+BACKEND_API=http://wol-backend:8080/api
