--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "theme_color": "#3d81e5",
-  "background_color": "#3d81e5",
+  "background_color": "#111827",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
