Changing PWA status bar color

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "theme_color": "#3d81e5",
+  "theme_color": "#111827",
   "background_color": "#111827",
   "display": "standalone",
   "scope": "/",
