WOL only work on host network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   backend:
     build: ./backend
     hostname: wol-backend
-    ports:
-      - "8080:8080"
+    network_mode: "host"
     restart: unless-stopped
     environment:
       - TZ=${TZ}
