--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,7 +13,7 @@ COPY nginx.conf.template /etc/nginx/conf.d/default.conf.template
 EXPOSE 80
 
 ENV TZ=America/Sao_Paulo
-ENV BACKEND_API=http://backend:8080/api
+ENV BACKEND_API=http://host.docker.internal:8080/api
 ENV DOLLAR="$"
 
 CMD /bin/ash -c "envsubst < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
