--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.7",
     "env-cmd": "^10.1.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
