--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,12 +5,9 @@ WORKDIR /go/src
 RUN go build -a -tags netgo -ldflags '-w -extldflags "-static"' -o main .
 
 
-FROM scratch
+FROM golang:1.21-alpine
 WORKDIR /app
 
-COPY --from=go-alpine /bin/ping /bin/ping
-COPY --from=go-alpine /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=go-alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=go-alpine /go/src/main /app
 COPY conf /app/conf
 COPY scripts /app/scripts
